<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:cardCornerRadius="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/step_detail_title_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textStyle="bold"
                    tools:text="Step 1:" />

                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                    android:id="@+id/playerView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/step_full_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="normal"
                    tools:text="2. Whisk the graham cracker crumbs, 50 grams (1/4 cup) of sugar, and 1/2 teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla into the dry ingredients and stir together until evenly mixed." />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:contentDescription="@string/view_previous_step"
                android:id="@+id/previous_step"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_weight="1"
                android:src="@drawable/ic_keyboard_arrow_left" />

            <View
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_weight="4" />


            <ImageView
                android:contentDescription="@string/view_next_step"
                android:id="@+id/next_step"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:src="@drawable/ic_keyboard_arrow_right" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>